--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>ComProDB</title>
   <link rel="stylesheet" href="/bootstrap.min.css" />
+  <link rel="stylesheet" href="/styles.css" />
 </head>
 <body>
   <div id="content"></div>
