Views cleanup and show more data

--- a/static/index.html
+++ b/static/index.html
@@ -6,6 +6,7 @@
   <title>ComProDB</title>
   <link rel="stylesheet" href="/bootstrap.min.css" />
   <link rel="stylesheet" href="/styles.css" />
+  <link rel="stylesheet" href="/font-awesome.min.css" />
 </head>
 <body>
   <div id="content"></div>
